--- a/FundMon/Pages/PortfoliosPage.xaml
+++ b/FundMon/Pages/PortfoliosPage.xaml
@@ -18,7 +18,24 @@
     </Page.Resources>
 
     <StackPanel Margin="10" Orientation="Vertical">
-        <TextBlock Style="{ThemeResource TitleTextBlockStyle}">Portefeuilles</TextBlock>
+
+        <CommandBar DefaultLabelPosition="Right">
+            <CommandBar.Content>
+                <TextBlock Style="{ThemeResource TitleTextBlockStyle}">Portefeuilles</TextBlock>
+            </CommandBar.Content>
+            <AppBarButton
+                x:Name="AddAppBarButton"
+                Click="AddAppBarButton_Click"
+                Icon="Add"
+                Label="Nouveau" />
+            <AppBarButton
+                x:Name="EditAppBarButton"
+                Click="EditAppBarButton_Click"
+                Icon="Edit"
+                IsEnabled="False"
+                Label="Modifier" />
+        </CommandBar>
+
         <GridView
             x:Name="GridView"
             Margin="10,20,10,0"
@@ -31,6 +48,7 @@
                 <DataTemplate x:DataType="repo:Portfolio">
                     <UserControl>
                         <Grid
+                            Height="Auto"
                             MinWidth="200"
                             MinHeight="90"
                             Padding="10,5,10,5"
@@ -54,6 +72,10 @@
                             <MenuFlyout>
                                 <MenuFlyout.Items>
                                     <MenuFlyoutItem
+                                        Click="MenuFlyoutEdit_Click"
+                                        Icon="Edit"
+                                        Text="Modifier" />
+                                    <MenuFlyoutItem
                                         Click="MenuFlyoutForward_Click"
                                         Icon="Forward"
                                         Text="Fonds" />
@@ -68,21 +90,6 @@
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
-
-        <StackPanel Orientation="Horizontal">
-
-            <AppBarButton
-                x:Name="AddAppBarButton"
-                Click="AddAppBarButton_Click"
-                Icon="Add"
-                Label="Ajouter un portefeuille" />
-            <AppBarButton
-                x:Name="EditAppBarButton"
-                Click="EditAppBarButton_Click"
-                Icon="Edit"
-                IsEnabled="False"
-                Label="Modifier" />
-        </StackPanel>
 
         <Grid
             x:Name="AddEditGrid"
