--- a/FundMon/MainWindow.xaml
+++ b/FundMon/MainWindow.xaml
@@ -2,19 +2,33 @@
     x:Class="FundMon.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FundMon"
-    xmlns:repo="using:FundMon.Repository"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:FundMon"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Closed="Window_Closed">
+    xmlns:repo="using:FundMon.Repository"
+    Closed="Window_Closed"
+    mc:Ignorable="d">
     <Grid RowDefinitions="32,*">
-        <StackPanel x:Name="TitleBar" Grid.Row="0" Orientation="Horizontal">
-            <Image Source="Assets/Square44x44Logo.targetsize-24.png" />
-            <TextBlock Margin="10,0,0,0" VerticalAlignment="Center" Text="{x:Bind Title}" TextWrapping="NoWrap"/>
+        <StackPanel
+            x:Name="TitleBar"
+            Grid.Row="0"
+            Orientation="Horizontal">
+            <Image
+                Width="16"
+                Height="16"
+                Margin="8,0"
+                HorizontalAlignment="Left"
+                Source="Assets/Square44x44Logo.scale-100.png" />
+            <TextBlock
+                x:Name="AppTitleTextBlock"
+                Margin="28,0,0,0"
+                VerticalAlignment="Center"
+                Style="{StaticResource CaptionTextBlockStyle}"
+                Text="{x:Bind Title}"
+                TextWrapping="NoWrap" />
         </StackPanel>
-        <Frame Grid.Row="1" x:Name="RootFrame" />
+        <Frame x:Name="RootFrame" Grid.Row="1" />
     </Grid>
-    
+
 
 </Window>
