--- a/FundMon/Pages/PortfolioZoomPage.xaml
+++ b/FundMon/Pages/PortfolioZoomPage.xaml
@@ -114,13 +114,19 @@
                     <controls1:DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button Click="RowShowChart_Click" ToolTipService.ToolTip="Graphique de l'historique" Padding="2">
+                                <Button
+                                    Padding="2"
+                                    Click="RowShowChart_Click"
+                                    ToolTipService.ToolTip="Graphique de l'historique">
                                     <FontIcon
                                         FontFamily="Segoe Fluent Icons"
                                         FontSize="15"
                                         Glyph="&#xE9D9;" />
                                 </Button>
-                                <Button Click="RowDeleteButton_Click" ToolTipService.ToolTip="Supprimer" Padding="2">
+                                <Button
+                                    Padding="2"
+                                    Click="RowDeleteButton_Click"
+                                    ToolTipService.ToolTip="Supprimer">
                                     <FontIcon
                                         FontFamily="Segoe Fluent Icons"
                                         FontSize="15"
@@ -292,22 +298,30 @@
                     VerticalAlignment="Center"
                     Text="3" />
             </Grid>
-                <TextBox
-                    Grid.Row="2"
-                    Grid.Column="2"
-                    MaxWidth="200"
-                    HorizontalAlignment="Left"
-                    x:Name="AverageCostTextBox"
-                    Header="Prix moyen d'achat"
-                    Visibility="Collapsed"
-                    TextChanged="AverageCostTextBox_TextChanged" />
-            <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal" Spacing="10">
+            <TextBox
+                x:Name="AverageCostTextBox"
+                Grid.Row="2"
+                Grid.Column="2"
+                MaxWidth="200"
+                HorizontalAlignment="Left"
+                Header="Prix moyen d'achat"
+                TextChanged="AverageCostTextBox_TextChanged"
+                Visibility="Collapsed" />
+            <StackPanel
+                Grid.Row="3"
+                Grid.Column="2"
+                Orientation="Horizontal"
+                Spacing="10">
                 <Button
                     x:Name="AddFundButton"
                     Click="AddFundButton_Click"
-                    Style="{ThemeResource AccentButtonStyle}"
-                    IsEnabled="False" Content="Ajouter le fond"/>
-                <Button x:Name="CancelButton" Click="CancelButton_Click" Content="Annuler" />
+                    Content="Ajouter le fond"
+                    IsEnabled="False"
+                    Style="{ThemeResource AccentButtonStyle}" />
+                <Button
+                    x:Name="CancelButton"
+                    Click="CancelButton_Click"
+                    Content="Annuler" />
             </StackPanel>
         </Grid>
     </StackPanel>
