--- a/FundMon/Pages/PortfoliosPage.xaml
+++ b/FundMon/Pages/PortfoliosPage.xaml
@@ -2,6 +2,7 @@
     x:Class="FundMon.Pages.PortfoliosPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:FundMon.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:FundMon.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,116 +17,123 @@
             <GradientStop Offset="1.0" Color="{ThemeResource SystemAccentColorLight3}" />
         </LinearGradientBrush>
     </Page.Resources>
+    <Grid>
+        <StackPanel Margin="10" Orientation="Vertical">
 
-    <StackPanel Margin="10" Orientation="Vertical">
+            <CommandBar DefaultLabelPosition="Right">
+                <CommandBar.Content>
+                    <TextBlock Style="{ThemeResource TitleTextBlockStyle}">Portefeuilles</TextBlock>
+                </CommandBar.Content>
+                <AppBarButton
+                    x:Name="AddAppBarButton"
+                    Click="AddAppBarButton_Click"
+                    Icon="Add"
+                    Label="Nouveau" />
+                <AppBarButton
+                    x:Name="EditAppBarButton"
+                    Click="EditAppBarButton_Click"
+                    Icon="Edit"
+                    IsEnabled="False"
+                    Label="Modifier" />
+            </CommandBar>
 
-        <CommandBar DefaultLabelPosition="Right">
-            <CommandBar.Content>
-                <TextBlock Style="{ThemeResource TitleTextBlockStyle}">Portefeuilles</TextBlock>
-            </CommandBar.Content>
-            <AppBarButton
-                x:Name="AddAppBarButton"
-                Click="AddAppBarButton_Click"
-                Icon="Add"
-                Label="Nouveau" />
-            <AppBarButton
-                x:Name="EditAppBarButton"
-                Click="EditAppBarButton_Click"
-                Icon="Edit"
-                IsEnabled="False"
-                Label="Modifier" />
-        </CommandBar>
+            <GridView
+                x:Name="GridView"
+                Margin="10,20,10,0"
+                DoubleTapped="GridView_DoubleTapped"
+                IsDoubleTapEnabled="True"
+                ItemsSource="{x:Bind ViewModel.Portfolios, Mode=OneWay}"
+                SelectionChanged="GridView_SelectionChanged">
 
-        <GridView
-            x:Name="GridView"
-            Margin="10,20,10,0"
-            DoubleTapped="GridView_DoubleTapped"
-            IsDoubleTapEnabled="True"
-            ItemsSource="{x:Bind ViewModel.Portfolios, Mode=OneWay}"
-            SelectionChanged="GridView_SelectionChanged">
+                <GridView.ItemTemplate>
+                    <DataTemplate x:DataType="repo:Portfolio">
+                        <UserControl>
+                            <Grid
+                                Height="Auto"
+                                MinWidth="200"
+                                MinHeight="90"
+                                Padding="10,5,10,5"
+                                Background="{StaticResource GradientBrush}"
+                                RowSpacing="5">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock
+                                    Grid.Row="0"
+                                    Style="{ThemeResource SubtitleTextBlockStyle}"
+                                    Text="{x:Bind Name, Mode=OneWay}" />
+                                <TextBlock
+                                    Grid.Row="1"
+                                    Style="{ThemeResource CaptionTextBlockStyle}"
+                                    Text="{x:Bind Description, Mode=OneWay}"
+                                    TextWrapping="WrapWholeWords" />
+                            </Grid>
+                            <UserControl.ContextFlyout>
+                                <MenuFlyout>
+                                    <MenuFlyout.Items>
+                                        <MenuFlyoutItem
+                                            Click="MenuFlyoutEdit_Click"
+                                            Icon="Edit"
+                                            Text="Modifier" />
+                                        <MenuFlyoutItem
+                                            Click="MenuFlyoutForward_Click"
+                                            Icon="Forward"
+                                            Text="Fonds" />
+                                        <MenuFlyoutItem
+                                            Click="MenuFlyoutDelete_Click"
+                                            Icon="Delete"
+                                            Text="Supprimer" />
+                                    </MenuFlyout.Items>
+                                </MenuFlyout>
+                            </UserControl.ContextFlyout>
+                        </UserControl>
+                    </DataTemplate>
+                </GridView.ItemTemplate>
+            </GridView>
 
-            <GridView.ItemTemplate>
-                <DataTemplate x:DataType="repo:Portfolio">
-                    <UserControl>
-                        <Grid
-                            Height="Auto"
-                            MinWidth="200"
-                            MinHeight="90"
-                            Padding="10,5,10,5"
-                            Background="{StaticResource GradientBrush}"
-                            RowSpacing="5">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <TextBlock
-                                Grid.Row="0"
-                                Style="{ThemeResource SubtitleTextBlockStyle}"
-                                Text="{x:Bind Name, Mode=OneWay}" />
-                            <TextBlock
-                                Grid.Row="1"
-                                Style="{ThemeResource CaptionTextBlockStyle}"
-                                Text="{x:Bind Description, Mode=OneWay}"
-                                TextWrapping="WrapWholeWords" />
-                        </Grid>
-                        <UserControl.ContextFlyout>
-                            <MenuFlyout>
-                                <MenuFlyout.Items>
-                                    <MenuFlyoutItem
-                                        Click="MenuFlyoutEdit_Click"
-                                        Icon="Edit"
-                                        Text="Modifier" />
-                                    <MenuFlyoutItem
-                                        Click="MenuFlyoutForward_Click"
-                                        Icon="Forward"
-                                        Text="Fonds" />
-                                    <MenuFlyoutItem
-                                        Click="MenuFlyoutDelete_Click"
-                                        Icon="Delete"
-                                        Text="Supprimer" />
-                                </MenuFlyout.Items>
-                            </MenuFlyout>
-                        </UserControl.ContextFlyout>
-                    </UserControl>
-                </DataTemplate>
-            </GridView.ItemTemplate>
-        </GridView>
-
-        <Grid
-            x:Name="AddEditGrid"
-            Margin="10"
-            ColumnSpacing="10"
-            RowSpacing="10"
-            Visibility="Collapsed">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Border Grid.Column="0" Background="{ThemeResource SystemAccentColor}" />
-            <TextBox
-                x:Name="NameTextBox"
-                Grid.Column="1"
-                MinWidth="150"
-                Header="Nom"
-                TextChanged="NameTextBox_TextChanged">
-                <TextBox.KeyboardAccelerators>
-                    <KeyboardAccelerator Key="Enter" Invoked="NameTextBoxAccelerator_Invoked" />
-                </TextBox.KeyboardAccelerators>
-            </TextBox>
-            <TextBox
-                x:Name="DescriptionTextBox"
-                Grid.Column="2"
-                MinWidth="150"
-                Header="Description" />
-            <Button
-                x:Name="AddButton"
-                Grid.Column="3"
-                VerticalAlignment="Bottom"
-                Click="AddButton_Click"
-                Content="Ajouter"
-                IsEnabled="False" />
-        </Grid>
-    </StackPanel>
+            <!--<Grid
+                x:Name="AddEditGrid"
+                Margin="10"
+                ColumnSpacing="10"
+                RowSpacing="10"
+                Visibility="Collapsed">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Border Grid.Column="0" Background="{ThemeResource SystemAccentColor}" />
+                <TextBox
+                    x:Name="NameTextBox"
+                    Grid.Column="1"
+                    MinWidth="150"
+                    Header="Nom"
+                    TextChanged="NameTextBox_TextChanged">
+                    <TextBox.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="Enter" Invoked="NameTextBoxAccelerator_Invoked" />
+                    </TextBox.KeyboardAccelerators>
+                </TextBox>
+                <TextBox
+                    x:Name="DescriptionTextBox"
+                    Grid.Column="2"
+                    MinWidth="150"
+                    Header="Description" />
+                <Button
+                    x:Name="AddButton"
+                    Grid.Column="3"
+                    VerticalAlignment="Bottom"
+                    Click="AddButton_Click"
+                    Content="Ajouter"
+                    IsEnabled="False" />
+            </Grid>-->
+        </StackPanel>
+        <controls:PortfolioEditModal
+            x:Name="EditModal"
+            Description="{x:Bind ViewModel.SelectedPortfolio.Description, Mode=TwoWay}"
+            DoneButtonName="{x:Bind ViewModel.DoneButtonName, Mode=OneWay}"
+            PortfolioName="{x:Bind ViewModel.SelectedPortfolio.Name, Mode=TwoWay}"
+            VisualState="{x:Bind ViewModel.ModalVisibility, Mode=TwoWay}" />
+    </Grid>
 </Page>
